--- a/force-app/main/default/aura/BoardPanel/BoardPanel.cmp
+++ b/force-app/main/default/aura/BoardPanel/BoardPanel.cmp
@@ -5,13 +5,12 @@
     />
 
     <lightning:card title="Word Shuffle">
-        <lightning:layout horizontalAlign = "center">
-
+        <lightning:layout horizontalAlign="center" multipleRows="true">
             <lightning:layoutItem padding="around-small">
                 <lightning:combobox 
                     name = "gameMode" 
                     label = "Game Mode" 
-                    value = "inProgress"
+                    value = "{!v.selectedGameMode}"
                     variant = "label-hidden" 
                     options = "{!v.modes}" 
                     placeholder = "Select Game Mode"
@@ -36,9 +35,13 @@
                     onclick = "{!c.reshuffleBoard}"
                     aura:id = "reshuffleId"
                 />
-            </lightning:layoutItem>
-            
+            </lightning:layoutItem>  
+
+            <aura:if isTrue="{! (v.selectedGameMode != null) }">
+                <lightning:layoutItem size="12">
+                    <c:Board mode="{!v.selectedGameMode}"></c:Board>
+                </lightning:layoutItem>         
+            </aura:if>          
         </lightning:layout>
-        {!'Here\'s some text: '} {!v.selectedGameMode}
     </lightning:card>
 </aura:component>
