--- a/force-app/main/default/aura/Block/Block.cmp
+++ b/force-app/main/default/aura/Block/Block.cmp
@@ -2,7 +2,11 @@
     <aura:attribute name="label" type="String"/>
     <aura:attribute name="open" type="Boolean" default="false" />
 
-    <!--Blocck tile container-->
+    <ltng:require scripts="{!$Resource.FitText}" afterScriptsLoaded="{!c.scriptsLoaded}" />
+
+    <!--Register our event-->
+    <aura:registerEvent name="onclick" type="c:BlockClickEvent"/>
+    <!--Block tile container-->
     <div class="board-block slds-align--absolute-center slds-var-m-around_medium slds-var-p-around-medium" onclick="{!c.onclickBlockHandler}">
         <aura:if isTrue="{!v.open}">
             {!v.label}
