--- a/force-app/main/default/aura/Board/Board.cmp
+++ b/force-app/main/default/aura/Board/Board.cmp
@@ -1,17 +1,26 @@
 <aura:component implements="flexipage:availableForAllPageTypes">
     <!-- Handler for component initialization -->
     <aura:handler name= "init" value = "{!this}" action = "{!c.doInit}"/>
-    
+    <!--handle our blockClick event-->
+    <!--<aura:handler name="onclick" event="c:BlockClickEvent" action="{!c.blockClickEventHandler}"/>-->
+    <aura:method name="startGame" action="{!c.doInit}"  description="Start new game"></aura:method> 
+
     <aura:attribute name="mode" type="String"/>
     <aura:attribute type="List" name="words" access="public"/>
     <aura:attribute type="String" name="winWord" access="public"/> <!--default access is public-->
     <aura:attribute type="Integer" name="clickCount" default="0"/>
     <aura:attribute name="blockSize" type="Integer" />
+    <aura:attribute name="result" type="String" />
+    <aura:attribute name="boardDisabled" type="Boolean" default="false"/>
 
     <div class="board">
         <lightning:layout>
             <lightning:layoutItem padding="around-small">
             <div class="slds-text-heading-medium">WORD : <span class="win-word">{!v.winWord}</span></div>
+            </lightning:layoutItem>
+            
+            <lightning:layoutItem padding="around-small">
+                <div class="slds-text-heading-medium">{!v.result}</div>
             </lightning:layoutItem>
 
             <lightning:layoutItem padding="around-small">
@@ -19,10 +28,14 @@
             </lightning:layoutItem>
         </lightning:layout>
 
+        <aura:if isTrue="{!v.boardDisabled}">
+            <div class="board-disabled"></div>
+        </aura:if>
+
         <lightning:layout multipleRows = "true">
             <aura:iteration items="{!v.words}" var="word">
                 <lightning:layoutItem size = "{!v.blockSize}" padding = "around-small">
-                    <c:Block label="{!word}"></c:Block>
+                    <c:Block label="{!word}" onclick="{!c.blockClickEventHandler}"> </c:Block>
                 </lightning:layoutItem>
             </aura:iteration>
         </lightning:layout>
