--- a/force-app/main/default/aura/Board/Board.cmp
+++ b/force-app/main/default/aura/Board/Board.cmp
@@ -3,7 +3,8 @@
     <aura:handler name= "init" value = "{!this}" action = "{!c.doInit}"/>
     <!--handle our blockClick event-->
     <!--<aura:handler name="onclick" event="c:BlockClickEvent" action="{!c.blockClickEventHandler}"/>-->
-    <aura:method name="startGame" action="{!c.doInit}"  description="Start new game"></aura:method> 
+    <aura:method name="startGame" action="{!c.doInit}"  description="Start new game"></aura:method>
+    <aura:method name="reshuffleBoard" action="{!c.reshuffleBoard}" description="Reshuffle Board"></aura:method> 
 
     <aura:attribute name="mode" type="String"/>
     <aura:attribute type="List" name="words" access="public"/>
@@ -33,9 +34,9 @@
         </aura:if>
 
         <lightning:layout multipleRows = "true">
-            <aura:iteration items="{!v.words}" var="word">
+            <aura:iteration items="{!v.words}" var="wordObj">
                 <lightning:layoutItem size = "{!v.blockSize}" padding = "around-small">
-                    <c:Block label="{!word}" onclick="{!c.blockClickEventHandler}"> </c:Block>
+                    <c:Block label="{!wordObj.word}" open="{!wordObj.open}" onclick="{!c.blockClickEventHandler}"> </c:Block>
                 </lightning:layoutItem>
             </aura:iteration>
         </lightning:layout>
